--- a/sistema_lime/menu_assets/stylesTeste.css
+++ b/sistema_lime/menu_assets/stylesTeste.css
@@ -1,141 +1,158 @@
-#cssmenu {
-  height: 37px;
-  display: block;
-  padding: 0;
+#cssmenu ul,
+#cssmenu li,
+#cssmenu span,
+#cssmenu a {
   margin: 0;
-  border: 1px solid;
-  border-radius: 5px;
+  padding: 0;
+  position: relative;
+}
+#cssmenu {
+  height: 49px;
+  border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  -webkit-border-radius: 5px 5px 0 0;
+  background: #fefefe;
+  background: -moz-linear-gradient(top, #fefefe 0%, #eee9f0 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fefefe), color-stop(100%, #eee9f0));
+  background: -webkit-linear-gradient(top, #fefefe 0%, #eee9f0 100%);
+  background: -o-linear-gradient(top, #fefefe 0%, #eee9f0 100%);
+  background: -ms-linear-gradient(top, #fefefe 0%, #eee9f0 100%);
+  background: linear-gradient(top, #fefefe 0%, #eee9f0 100%);
+  border-bottom: 2px solid #0000d9;
   width: auto;
 }
-
-
+#cssmenu:after,
+#cssmenu ul:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+#cssmenu a {
+  background: #fefefe;
+  background: -moz-linear-gradient(top, #fefefe 0%, #ececec 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fefefe), color-stop(100%, #ececec));
+  background: -webkit-linear-gradient(top, #fefefe 0%, #ececec 100%);
+  background: -o-linear-gradient(top, #fefefe 0%, #ececec 100%);
+  background: -ms-linear-gradient(top, #fefefe 0%, #ececec 100%);
+  background: linear-gradient(top, #fefefe 0%, #ececec 100%);
+  color: #000;
+  display: inline-block;
+  font-family: Helvetica, Arial, Verdana, sans-serif;
+  font-size: 12px;
+  line-height: 49px;
+  padding: 0 20px;
+  text-decoration: none;
+}
+#cssmenu ul {
+  list-style: none;
+}
 #cssmenu > ul {
-  list-style: inside none;
-  padding: 0;
-  margin: 0;
+  float: left;
 }
 #cssmenu > ul > li {
-  list-style: inside none;
-  padding: 0;
-  margin: 0;
   float: left;
-  display: block;
-  position: relative;
 }
 #cssmenu > ul > li > a {
-  outline: none;
+  color: #000;
+  font-size: 12px;
+}
+#cssmenu > ul > li:hover:after {
+  content: '';
   display: block;
-  position: relative;
-  padding: 12px 20px;
-  text-align: center;
-  text-decoration: none;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
-  font-weight: bold;
-  font-size: 13px;
-  font-family: Arial, Helvetica, sans-serif;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #0000d9;
+  margin-left: -10px;
 }
 #cssmenu > ul > li:first-child > a {
-  border-radius: 5px 0 0 5px;
+  border-radius: 5px 0 0 0;
+  -moz-border-radius: 5px 0 0 0;
+  -webkit-border-radius: 5px 0 0 0;
 }
-#cssmenu > ul > li > a:after {
+#cssmenu > ul > li.active:after {
   content: '';
+  display: block;
+  width: 0;
+  height: 0;
   position: absolute;
-  border-right: 1px solid;
-  top: -1px;
-  bottom: -1px;
-  right: -2px;
-  z-index: 99;
-}
-#cssmenu ul li.has-sub:hover > a:after {
-  top: 0;
+  left: 50%;
   bottom: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #0000d9;
+  margin-left: -10px;
 }
-#cssmenu > ul > li.has-sub > a:before {
-  content: '';
-  position: absolute;
-  top: 18px;
-  right: 6px;
-  border: 5px solid transparent;
-  border-top: 5px solid #ffffff;
+#cssmenu > ul > li.active > a {
+  -moz-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+  background: #ececec;
+  background: -moz-linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ececec), color-stop(100%, #ffeeff ef));
+  background: -webkit-linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  background: -o-linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  background: -ms-linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  background: linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
 }
-#cssmenu > ul > li.has-sub:hover > a:before {
-  top: 19px;
+#cssmenu > ul > li:hover > a {
+  background: #ececec;
+  background: -moz-linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ececec), color-stop(100%, #ffeeff ef));
+  background: -webkit-linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  background: -o-linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  background: -ms-linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  background: linear-gradient(top, #ececec 0%, #ffeeff ef 100%);
+  -moz-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
 }
-#cssmenu ul li.has-sub:hover > a {
-  background: #3f3f3f;
-  border-color: #3f3f3f;
-  padding-bottom: 13px;
-  padding-top: 13px;
-  top: -1px;
-  z-index: 999;
+#cssmenu .has-sub {
+  z-index: 1;
 }
-#cssmenu ul li.has-sub:hover > ul,
-#cssmenu ul li.has-sub:hover > div {
+#cssmenu .has-sub:hover > ul {
   display: block;
 }
-#cssmenu ul li.has-sub > a:hover {
-  background: #3f3f3f;
-  border-color: #3f3f3f;
-}
-#cssmenu ul li > ul,
-#cssmenu ul li > div {
+#cssmenu .has-sub ul {
   display: none;
-  width: auto;
   position: absolute;
-  top: 38px;
-  padding: 10px 0;
-  background: #3f3f3f;
-  border-radius: 0 0 5px 5px;
-  z-index: 999;
-}
-#cssmenu ul li > ul {
   width: 200px;
+  top: 100%;
+  left: 0;
 }
-#cssmenu ul li > ul li {
+#cssmenu .has-sub ul li {
+  *margin-bottom: -1px;
+}
+#cssmenu .has-sub ul li a {
+  background: #0000d9;
+  border-bottom: 1px dotted #0d0dff;
+  filter: none;
+  font-size: 11px;
   display: block;
-  list-style: inside none;
-  padding: 0;
-  margin: 0;
-  position: relative;
+  line-height: 120%;
+  padding: 10px;
+  color: #ffffff;
 }
-#cssmenu ul li > ul li a {
-  outline: none;
+#cssmenu .has-sub ul li:hover a {
+  background: #0000a6;
+}
+#cssmenu .has-sub .has-sub:hover > ul {
   display: block;
-  position: relative;
-  margin: 0;
-  padding: 8px 20px;
-  font: 10pt Arial, Helvetica, sans-serif;
-  color: #ffffff;
-  text-decoration: none;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
 }
-#cssmenu,
-#cssmenu > ul > li > ul > li a:hover {
-  background: #3a30c2;
-  background: -moz-linear-gradient(top, #3a30c2 0%, #2e2699 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3a30c2), color-stop(100%, #2e2699));
-  background: -webkit-linear-gradient(top, #3a30c2 0%, #2e2699 100%);
-  background: -o-linear-gradient(top, #3a30c2 0%, #2e2699 100%);
-  background: -ms-linear-gradient(top, #3a30c2 0%, #2e2699 100%);
-  background: linear-gradient(top, #3a30c2 0%, #2e2699 100%);
+#cssmenu .has-sub .has-sub ul {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: 0;
 }
-#cssmenu {
-  border-color: #221c70;
+#cssmenu .has-sub .has-sub ul li a {
+  background: #0000a6;
+  border-bottom: 1px dotted #0d0dff;
 }
-#cssmenu > ul > li > a {
-  border-right: 1px solid #221c70;
-  color: #ffffff;
-}
-#cssmenu > ul > li > a:after {
-  border-color: #3a30c2;
-}
-#cssmenu > ul > li > a:hover {
-  background: #221c70;
-  color: #ffffff;
-}
-#cssmenu ul ul a:hover {
-  color: #ffffff;
-}
-#cssmenu > ul > li.has-sub > a:hover:before {
-  border-top: 5px solid #ffffff;
+#cssmenu .has-sub .has-sub ul li a:hover {
+  background: #00008d;
 }
