--- a/sistema_lime/menu_assets/styles4.css
+++ b/sistema_lime/menu_assets/styles4.css
@@ -3,7 +3,7 @@ div.topic {
     margin-bottom: 1em;
     padding: .25em;
     border: black thin solid;
-    background-color: #EEEEFF;
+    background-color: #FFFFFF;
     width: 40em;
 }
 
