--- a/sistema_lime/menu_assets/styles3.css
+++ b/sistema_lime/menu_assets/styles3.css
@@ -94,6 +94,7 @@ color: white;
   text-align: left;
 }
 #cssmenu li ul a:hover,
+#cssmenu li ul a.here,
 #cssmenu li ul li:hover > a {
   background: #2580a2 url('hover_sub.png') center left no-repeat;
   border: 0px;
