--- a/sistema_lime/menu_assets/styles3.css
+++ b/sistema_lime/menu_assets/styles3.css
@@ -40,6 +40,7 @@ Menu {
   color: #cccccc;
 }
 #cssmenu li > a:hover,
+#cssmenu li > a.here,
 #cssmenu ul li:hover > a {
   background: #2580a2 url('hover.png') bottom center no-repeat;
   color: #FFFFFF;
